# cricket-score-predictor

./: DOCUMENTATION.md  README.md  app.py  cricket_api.py  design_guidelines.md  email_responder.py  gmail_helper.py  insights.py  ipl_stats.py  live_match_scraper.py  models.py  player_data.py  prediction.py  prematch.py  pyproject.toml  replit.md  replit_auth.py  routes.py  stats_scraper.py  t20_players.py  u19_players.py
static/css/: style.css
templates/: 403.html  analytics_dashboard.html  base.html  bug_report.html  feedback_dashboard.html  index.html  insights.html  prematch.html  results.html  support_chat.html
tests/: conftest.py  test_app.py
